# bifrost-xt

./: Cargo.toml  README.md  convert-csv-to-json.py
src/: assets.rs  balances.rs  batch_trades.rs  error_types.rs  main.rs  producers_schedule.rs  prove_action.rs  scheduler.rs  utils.rs  voucher.rs
src/data/: producer_authority_schedule_v2-54.json  producer_authority_schedule_v2.json
