[package]
name = "bifrost-xt"
version = "0.5.0"
authors = ["Dengjianping <djptux@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive"] }
eos-chain = { git = "https://github.com/bifrost-finance/rust-eos", branch = "master" }
futures = "0.3.5"
frame-support = "2.0.0"
frame-system = "2.0.0"
lazy_static = "1.4.0"
once_cell = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sp-core = "2.0.0"
sp-keyring = "2.0.0"
sp-runtime= "2.0.0"
subxt = { version = "0.13", package = "substrate-subxt" }
tokio = { version = "0.2.22", features = ["macros", "rt-threaded"] }

[profile.release]
opt-level = 3 # 3
debug = false # false
