[package]
name = "bifrost-xt"
version = "0.5.0"
authors = ["Dengjianping <djptux@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive"] }
eos-chain = { git = "https://github.com/bifrost-finance/rust-eos", branch = "master" }
futures = "0.3.7"
frame-support = "2.0.0"
frame-system = "2.0.0"
lazy_static = "1.4.0"
hex = "0.4.2"
once_cell = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sp-core = "2.0.0"
sp-keyring = "2.0.0"
sp-runtime= "2.0.0"
subxt = { version = "0.13", package = "substrate-subxt" }
tokio = { version = "0.3.3", features = ["macros", "rt-multi-thread"] }
walkdir = "2.3.1"

[profile.release]
opt-level = 3 # 3

[patch.crates-io]
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-metadata = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-externalities = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-state-machine = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-storage = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-indices = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-session = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-staking = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-im-online = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
subxt = { package = "substrate-subxt", path = "/home/bifrost/jdeng/substrate-subxt" }