[package]
name = "bifrost-xt"
version = "0.7.0"
authors = ["Dengjianping <djptux@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
eos-chain = { git = "https://github.com/bifrost-finance/rust-eos", branch = "master" }
futures = "0.3.13"
frame-support = "3.0.0"
frame-system = "3.0.0"
lazy_static = "1.4.0"
hex = "0.4.2"
once_cell = "1.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sp-core = "3.0.0"
sp-keyring = "3.0.0"
sp-runtime= "3.0.0"
subxt = { git = "https://github.com/paritytech/substrate-subxt.git", package = "substrate-subxt" }
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
walkdir = "2.3.1"

[profile.release]
opt-level = 3 # 3
